fixed sass compiling per https://stackoverflow.com/q/70041191/370407

--- a/content/themes/vanguard-history/css/_typography.scss
+++ b/content/themes/vanguard-history/css/_typography.scss
@@ -2,12 +2,15 @@
 ---------*/
 /*! Typebase.scss v0.1.0 | MIT License */
 
+@use 'var' as *;
+@use 'sass:math';
+
 /* Setup */
 
 html {
     /* Change default typefaces here */
     font-family: serif;
-    font-size: ($baseFontSize / 16) * 100%;
+    font-size: math.div($baseFontSize, 16) * 100%;
     // Make everything look a little nicer in webkit
     -webkit-font-smoothing: antialiased;
     // -webkit-text-size-adjust: auto
@@ -70,13 +73,13 @@ h3 {
     font-size: 1 * $scale * 1rem;
 }
 h4 {
-    font-size: ($scale / 2) * 1rem;
+    font-size: math.div($scale, 2) * 1rem;
 }
 h5 {
-    font-size: ($scale / 3) * 1rem;
+    font-size: math.div($scale, 3) * 1rem;
 }
 h6 {
-    font-size: ($scale / 4) * 1rem;
+    font-size: math.div($scale, 4) * 1rem;
 }
 /* Tables */
 
